--- a/css/styles.css
+++ b/css/styles.css
@@ -1,2 +1,28 @@
 @charset "UTF-8";
 /* yummy jelly (@scheme color) */
+
+/* GENERAL */
+body, html {
+	margin: 0;
+	width: 100%;
+	height: 100%;
+	padding: 0;
+	background-color: #DA614E;
+	text-align: center;
+	letter-spacing: 1px;
+	font-family: cursive;
+	font-size: 16px;
+	color: white;
+}
+
+
+
+/* HEADER */
+
+
+
+/* MAIN */
+
+
+
+/* FOOTER */
